# QuicRTCEngine

./: Build-win32-VS2019.bat  Build-win32-VS2022.bat  CMakeLists.txt  README.md
Dependencies/libquic/include/xquic/: xquic.h
Dependencies/libquic/libs/Debug/Win32/: libquic.lib
Dependencies/libquic/libs/Debug/x64/: libquic.lib
Dependencies/libquic/libs/Release/Win32/: libquic.lib
Dependencies/libquic/libs/Release/x64/: libquic.lib
src/: CMakeLists.txt
src/Xquic-test/: Application.cpp  CMakeLists.txt  Xquic_Client.h  Xquic_Server.h  test_client.c
src/log/: CMakeLists.txt
src/utils/: CMakeLists.txt  utils.h
